--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     },
     "require": {
         "php": "^7.2",
-        "elasticsearch/elasticsearch": "^7.3"
+        "elasticsearch/elasticsearch": "^6.7|^7.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.4",
